hopefully fix misalignment of categories in header in Firefox

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -76,7 +76,7 @@
         //background-color: rgba(255, 255, 255, 0.1);
         padding: 2px 7px;
         border-radius: 5px;
-        margin: -2px -7px;
+        margin-left: -7px;
 
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
